--- a/Position/style.css
+++ b/Position/style.css
@@ -158,6 +158,7 @@ body{
     margin-top: 1rem;
     background-size: 150% 150%;
     /* background-position: 0% 50%; */
+    transform: translate(-100px,-50px);
 }
 
 .order-button-anim:hover{
